2008-03-15  Sebastien Pouliot  <sebastien@ximian.com>

	* DetectNonAlphaNumericsInTypeNamesTest.cs: Add test case for
	COM interop.

2008-02-15  Sebastien Pouliot  <sebastien@ximian.com>

	* DetectNonAlphaNumericsInTypeNamesTest.cs
	* DoNotPrefixValuesWithEnumNameTest.cs
	* DoNotUseReservedInEnumValueNamesTest.cs
	* EnumNotEndsWithEnumOrFlagsSuffixTest.cs
	* ParameterNamesShouldMatchOverridenMethodTest.cs
	* UseCorrectCasingTest.cs
	* UseCorrectPrefixTest.cs
	* UseCorrectSuffixTest.cs
	* UsePluralNameInEnumFlagsTest.cs
	* UsePreferredTermsTest.cs
	* UseSingularNameInEnumsUnlessAreFlagsTest.cs:
		Update unit tests wrt framework changes.

2008-01-14  Sebastien Pouliot  <sebastien@ximian.com>

	* DoNotPrefixValuesWithEnumNameTest.cs: New. Unit tests from Andreas
	Noever
	* DoNotUseReservedInEnumValueNamesTest.cs: : New. Unit tests from
	Andreas	Noever
	* ParameterNamesShouldMatchOverridenMethodTest.cs: : New. Unit 
	tests from Andreas Noever
	* Test.Rules.Naming.mdp: Update MonoDevelop project file.

2007-12-26  Sebastien Pouliot  <sebastien@ximian.com>

	* AttributeEndsWithAttributeSuffixTest.cs: Deleted. The new
	UseCorrectSuffixTest is a superset of the rule/tests.
	* Test.Rules.Naming.mdp: Update MonoDevelop project file.
	* UseCorrectPrefixTest.cs: New. Test cases from Daniel Abramov.
	* UseCorrectCasingTest.cs: New. Test cases from Daniel Abramov.
	* UseCorrectSuffixTest.cs: New. Test cases from Daniel Abramov.
	* UsePreferredTermsTest.cs: New. Test cases from Daniel Abramov.

2007-10-08  Sebastien Pouliot  <sebastien@ximian.com>

	* DetectNonAlphaNumericsInTypeNamesTest.cs: Add test cases for 
	non-nested types. Add test case with a delegate (2.0). Make sure 
	everything is tested inside loops.
	* Test.Rules.Naming.mdp: Use 2.0 runtime for tests.

2007-10-07  Sebastien Pouliot  <sebastien@ximian.com>

	* DetectNonAlphaNumericsInTypeNamesTest.cs: Unit tests (Nidhi Rawal, 
	GSoC 2007)
	* Test.Rules.Portability.mdp: Update project file.
