@@ -1,3 +1,9 @@
+2008-03-19  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* UseCorrectCasingTest.cs: Fix test case for compiler-generated code
+	(anonymous methods) and CSC.
+	* UseCorrectSuffixTest.cs: Add test cases for generics.
+
 2008-03-15  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* DetectNonAlphaNumericsInTypeNamesTest.cs: Add test case for
